--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Happy Birthday Jaan </title>
+<title>Happy Birthday Vaishu </title>
 <link rel="stylesheet" href="css/styles.css">
 <link rel="icon" href="images/favicon.png">
 </head>
